2009-Jul-22	weaver	Tag V01-00-01.  Uses additional vectoring field in TimeStamp.
			Added qualifiers to PartitionControl transitions.
2009-Jul-14	weaver  Tag V01-00-00.  Consistent with pdsdata V00-05-00.  Added calibration
			cycles.  Added sequencing in the Evr (nevents or time).  Source levels
			now identify themselves by DetInfo to the ControlLevel during platform
			discovery.  Recorded transitions are broadcast (AllEvents, AllRecorders
			multicast group) to all nodes.
2009-Jul-13     cpo     Fix bug where AcqManager was putting the same task on the queue
                        when reconfiguring.
2009-Jul-10     cpo     Support for configuration of acqiris from database
2009-Jul-07	weaver  Fixed SysClk::sample rollover in VmonEb histos.  Fixed recorder level fixup
			that added contributions from all event levels.
2009-Jun-01	weaver	Tag V00-09-00.  Consistent with pdsdata V00-04-00.  Added management/PartitionControl
			as a base for run control sequencer.
2009-Apr-16	weaver	Added Pulnix TM6740 camera.  Added occurrences to collection messages.
			Added function to drop evr multicasts and generate opal1k out-of-order (for testing).
			Fix in GenericPoolW to use counting semaphore for pool resource counting.
			Fix in Event Builder to keep good events in order.  Individual (errant) events can slip 
			out-of-order due to dropped contributions and missing PulseId. 
			Added support for vmon archiving. 
2009-Apr-3      cpo     Change some default acqiris params so that
                        we don't get as many "WARNING: Parameter has been
                        adapted" messages.  We still have one, which
                        comes when we set the trigger coupling to DC50ohms
                        (for some reason it complains that the previous
                        setting didn't have the 50 ohms in it, I believe).

2009-Mar-31     weaver  Tag V00-08-00.  Consistent with pdsdata V00-03-00.
			Added missing versions to all data type constructions.